fix: clearer reaction spacing It was a bit unclear 'which' message a reaction was intended for, as they had quite a lot of spacing away fromt the message itself - this commit tightens that spacing and brings reactions closer to their message, so it should be clearer!

--- a/src/styles.css
+++ b/src/styles.css
@@ -238,6 +238,13 @@ body {
   transition: opacity 0.1s;
 }
 
+.reaction {
+  cursor: default;
+  position: relative;
+  height: fit-content;
+  width: fit-content;
+}
+
 .msg-them:hover .add-reaction  {
   opacity: 0.75;
 }
